--- a/src/assets/scss/now-ui-kit/_sections.scss
+++ b/src/assets/scss/now-ui-kit/_sections.scss
@@ -311,8 +311,8 @@
 [data-background-color="orange"]{
     background-color: $orange-bg;
 }
-[data-background-color="black"]{
-    background-color: $black-color;
+[data-background-color="white"]{
+    background-color: $white-color;
 }
 
 [data-background-color]:not([data-background-color="gray"]){
