--- a/src/assets/sass/black-dashboard/custom/_variables.scss
+++ b/src/assets/sass/black-dashboard/custom/_variables.scss
@@ -110,7 +110,7 @@ $info:          #1d8cf8 !default;
 $warning:       #ff8d72 !default;
 $danger:        #fd5d93 !default;
 $black:         #222a42 !default;
-$vue:           #42b883 !default;
+$vue:           #00B074 !default;
 
 // gradient
 $default-states:       #263148 !default;
@@ -120,10 +120,10 @@ $info-states:          #3358f4 !default;
 $warning-states:       #ff6491 !default;
 $danger-states:        #ec250d !default;
 $black-states:         #1d253b !default;
-$vue-states:           #389466 !default;
+$vue-states:           #00B074 !default;
 
-$background-black:           #1e1e2f !default;
-$background-states-black:    #1e1e24 !default;
+$background-black:           #adb7c5 !default;
+$background-states-black:    #adb7c5 !default;
 
 // opacity
 $default-opacity:      rgba(182, 182, 182, .6) !default;
